--- a/index.html
+++ b/index.html
@@ -15,27 +15,26 @@
             <form>
                 <div>
                     <label for="user-text">Text to analyze</label>
-                    <textarea cols="60" rows="20" id="user-text" name="user-text" placeholder="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." required></textarea>
+                    <textarea cols="60" rows="20" class = 'js-textInput' id="user-text" name="user-text" placeholder="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." required></textarea>
                 </div>
                 <div>
-                    <button type="submit">Analyze it!</button>
+                    <button class = 'js-submit'type="submit">Analyze it!</button>
                 </div>
             </form>
 
             <dl class="hidden text-report">
                 <dt>Word count</dt>
-                <dd></dd>
+                <dd class="js-wordCount"></dd>
 
                 <dt>Unique word count</dt>
-                <dd></dd>
+                <dd class="js-uniqueCount"></dd>
 
                 <dt>Average word length</dt>
-                <dd></dd>
+                <dd class="js-avgLength"></dd>
             </dl>
         </main>
     </div>
-
-    <!-- link to jquery -->
-    <!-- link to your app.js -->
+    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+     <script type="text/javascript" src='app.js'></script>
 </body>
 </html>
